Add /basket/show and /profile, add ProductMapper, BasketResponse, UserProfileResponse.